kubernetes/apps/databases/emqx/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  hostnames: ["emqx.${SECRET_DOMAIN}"]
  parentRefs:
    - name: internal-envoy
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx-dashboard
          namespace: databases
          port: 18083
